[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/white-space/pre-wrap-014.html https://bugs.webkit.org/show_bug.cgi?id=205657 <rdar://problem/58254951>

Reviewed by Antti Koivisto.

Use the adjusted available width when justifying the runs during line close.

* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::justifyRuns const):
(WebCore::Layout::LineBuilder::alignHorizontally):
* layout/inlineformatting/InlineLineBuilder.h:


Canonical link: https://commits.webkit.org/218837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253961 268f45cc-cd09-0410-ab3c-d52691b4dbfc