Source/WebCore/layout/inlineformatting/InlineLineBuilder.h
@@ -151,7 +151,7 @@ private:
 
     bool isTextAlignJustify() const { return m_horizontalAlignment == TextAlignMode::Justify; };
     bool isTextAlignRight() const { return m_horizontalAlignment == TextAlignMode::Right || m_horizontalAlignment == TextAlignMode::WebKitRight || m_horizontalAlignment == TextAlignMode::End; }
-    void justifyRuns(RunList&) const;
+    void justifyRuns(RunList&, InlineLayoutUnit availableWidth) const;
 
     bool isVisuallyNonEmpty(const InlineItemRun&) const;
 
